@@ -4,6 +4,8 @@
   undefined symbols to be referenced and implicitly created (referring to
   proxy blocks)
 - Added support for indirect branches and calls
+- get_or_insert_extern_sym now puts proxies in the module's proxies set
+- get_or_insert_extern_sym now populates elfSymbolInfo
 
 0.0.23:
 - Dramatically sped up the time spent applying patches with calls
